[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://UI/Layers/LayerConfiguration/LayerCompositionWidget.gd" id="1"]
[ext_resource type="Script" path="res://UI/Layers/LayerConfiguration/EditWindow.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://23k0cl4yv3b3" path="res://Resources/Icons/ModernLandscapeLab/eye_crossed.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://dugrgepqgf6ik" path="res://Resources/Icons/ModernLandscapeLab/three_points.svg" id="4"]
[ext_resource type="PackedScene" uid="uid://p6cm0acpl15r" path="res://UI/CustomElements/AutoIconButton.tscn" id="5"]
[ext_resource type="Theme" uid="uid://dsbyviyb5cpke" path="res://UI/Theme/LayerWidget.tres" id="7"]
[ext_resource type="Texture2D" uid="uid://bgla5bw7tc34a" path="res://Resources/Icons/ModernLandscapeLab/rotate.svg" id="9"]
[ext_resource type="Texture2D" uid="uid://c3kuxlnuadbrl" path="res://Resources/Icons/ModernLandscapeLab/eyes.svg" id="10"]

[node name="LayerWidget" type="HBoxContainer"]
offset_left = 438.0
offset_right = 781.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
focus_mode = 1
theme = ExtResource("7")
script = ExtResource("1")

[node name="RightContainer" type="HBoxContainer" parent="."]
offset_right = 275.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VisibilityBox" type="MarginContainer" parent="RightContainer"]
offset_right = 45.0
offset_bottom = 30.0

[node name="ColorRect" type="ColorRect" parent="RightContainer/VisibilityBox"]
offset_right = 45.0
offset_bottom = 30.0
color = Color(1, 1, 1, 0)

[node name="VisibilityButton" type="TextureButton" parent="RightContainer/VisibilityBox"]
offset_right = 45.0
offset_bottom = 30.0
toggle_mode = true
texture_normal = ExtResource("10")
texture_pressed = ExtResource("3")

[node name="VSeparator" type="VSeparator" parent="RightContainer"]
offset_left = 49.0
offset_right = 53.0
offset_bottom = 30.0

[node name="Icon" type="TextureRect" parent="RightContainer"]
custom_minimum_size = Vector2i(30, 30)
offset_left = 57.0
offset_right = 87.0
offset_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 0
ignore_texture_size = true
stretch_mode = 6

[node name="NameSizeFix" type="Control" parent="RightContainer"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 91.0
offset_right = 275.0
offset_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Name" type="Label" parent="RightContainer/NameSizeFix"]
clip_contents = true
offset_right = 180.0
offset_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "123456789101112"

[node name="LeftContainer" type="HBoxContainer" parent="."]
offset_left = 279.0
offset_right = 343.0
offset_bottom = 30.0
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2

[node name="Reload" parent="LeftContainer" instance=ExtResource("5")]
offset_right = 30.0
offset_bottom = 30.0
size_flags_vertical = 0
mouse_filter = 1
icon = ExtResource("9")
texture_name = "rotate"

[node name="Edit" parent="LeftContainer" instance=ExtResource("5")]
offset_left = 34.0
offset_right = 64.0
offset_bottom = 30.0
size_flags_vertical = 0
mouse_filter = 1
icon = ExtResource("4")
texture_name = "three_points"

[node name="EditMenu" type="PopupMenu" parent="."]
item_count = 2
item_0/text = "Configure..."
item_0/id = 0
item_1/text = "Translate to layer"
item_1/id = 1
script = ExtResource("2")

[node name="ColorMenu" type="PopupMenu" parent="EditMenu"]

[node name="ObjectMenu" type="PopupMenu" parent="EditMenu"]
